# InstAnalytics

./: .gitignore  InstAnalytics.slnx  LICENSE
InstAnalytics/: App.xaml  App.xaml.cs  InstAnalytics.csproj  MainWindow.xaml  MainWindow.xaml.cs
InstAnalytics/Models/: AnalysisRecord.cs  InstagramJsonModels.cs  InstagramUser.cs
InstAnalytics/Properties/PublishProfiles/: FolderProfile.pubxml
InstAnalytics/Services/: HistoricalDataService.cs  IInstagramHtmlParser.cs  InstagramAnalyzerService.cs  InstagramFollowersJsonParser.cs  InstagramFollowersParser.cs  InstagramFollowingJsonParser.cs  InstagramFollowingParser.cs  InstagramParserDebugger.cs  InstagramParserTester.cs  InstagramZipService.cs
InstAnalytics/ViewModels/: StatisticsViewModel.cs
InstAnalyticsInstaller/: .gitignore  CMakeLists.txt  build.bat  clean.bat
InstAnalyticsInstaller/include/: Constants.h  DotNetChecker.h  Downloader.h  Installer.h  UIManager.h  ZipExtractor.h
InstAnalyticsInstaller/resources/: RCa42548  installer.manifest  installer.rc
InstAnalyticsInstaller/src/: DotNetChecker.cpp  Downloader.cpp  Installer.cpp  UIManager.cpp  ZipExtractor.cpp  main.cpp
